# MySimpleBank

./: README.md
client/: CMakeCache.txt  CMakeLists.txt  Makefile  banking_client  cmake_install.cmake
client/include/: ApiClient.h  BankingClient.h  ConsoleView.h  InputHandler.h  SessionManager.h
client/include/controllers/: AuthController.h  DepositsController.h  TransactionController.h
client/src/: ApiClient.cpp  BankingClient.cpp  ConsoleView.cpp  InputHandler.cpp  SessionManager.cpp  main.cpp
client/src/controllers/: AuthController.cpp  DepositsController.cpp  TransactionController.cpp
server/: CMakeCache.txt  CMakeLists.txt  Makefile  banking_server  cmake_install.cmake
server/ServerNWebINCLUDE/: AccountManager.h  BankingApp.h  Common.h  DepositManager.h  HttpServer.h  RedisClient.h  Serializer.h  TransactionManager.h
server/ServerNWebSRC/: AccountManager.cpp  BankingApp.cpp  DepositManager.cpp  HttpServer.cpp  RedisClient.cpp  Serializer.cpp  TransactionManager.cpp  main.cpp
